# wastewater-backend

./: .gitignore  Cargo.toml  note.md
.cargo/: config.toml
src/: app_state.rs  main.rs
src/config/: server.rs
src/database/: mod.rs  redb.rs  sea_orm_db.rs  sea_orm_example.rs
src/handlers/: alarm_log.rs  alarm_rule.rs  automation_rule.rs  device.rs  flow_value.rs  mod.rs  ph_value.rs  tds_value.rs  turbidity_value.rs  user.rs
src/message_queue/: consumer_example.rs  mod.rs  rabbitmq.rs
src/middleware/: logging.rs
src/models/: alarm_log.rs  alarm_rule.rs  automation_rule.rs  device.rs  flow_value.rs  ph_value.rs  tds_value.rs  turbidity_value.rs  user.rs
src/mqtt/: mod.rs  rumqtt.rs
src/routes/: api.rs  mod.rs  static_files.rs
src/utils/: adc.rs  can.rs  error.rs  ethernet.rs  gpio.rs  i2c.rs  i2s.rs  mod.rs  modbus.rs  modbus_example.rs  pwm.rs  response.rs  spi.rs  uart.rs  usb.rs
