[package]
name = "guolu"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
tokio-modbus = { version = "*", features = ["server", "tcp-server", "rtu-server"] }
tokio-serial = "5.4.4"
redb = "3.1.0"
thiserror = "2.0.17"
bincode = "2.0.1"
rumqttc = "0.25.0"
tracing-subscriber = "0.3.20"
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-query = "0.32"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
lapin = "3.7.2"
futures-util = "0.3"